# developtools_integration_verification

./: .gitignore  OAT.xml  README.md
DeployDevice/src/: controller.py
deps_guard/: deps_guard.py
deps_guard/elf_file_mgr/: __init__.py  elf_file.py  elf_walker.py  utils.py
deps_guard/rules_checker/: __init__.py  base_rule.py
scripts/: ace_engine.json  ace_engine_tdd.py
tools/: check.py
tools/arkui_tools/: arkui_hfile_counts.py
tools/code_access_control/: check_arkweb_hard_coded.py  sdk_check_comment.py
tools/components/: get_components.py
tools/components_deps/: README.md  components_deps_analyzer.py
tools/deps_guard/: dep_whitelist.json  deps_guard.py
tools/fotff/: fotff.ini  main.go
tools/gated_check_in/: ace_engine.json  ace_engine_tdd.py
tools/opensource_tools/: README_OSS.md  pyproject.toml  requirements.txt
tools/opensource_tools/data/: spdx.json
tools/opensource_tools/src/: __init__.py  generate_readme_opensource.py  generate_reference_data.py  spdx_converter.py  spdx_license_matcher.py  validate_readme_opensource.py
tools/opensource_tools/test/: __init__.py  conftest.py  reference_data.json  test_generate_readme_opensource.py  test_spdx_converter.py  test_spdx_license_matcher.py  test_validate_readme_opensource.py
tools/precise_build/: gn  precise_build.py  precise_build_arkui_config.json  precise_build_config.json  precise_build_tdd_config.json  precise_build_tdd_test_config.json  precise_build_test.py
tools/rom_ram_analyzer/: README.md  ram_analyzer.py  rom_analyzer.py
tools/startup_guard/: startup_guard.py
(+294 files in other folders)
